# cmake-template

./: CMakeLists.txt  README.md
operators/: CMakeLists.txt
operators/include/: operators.hpp
operators/src/: add.cpp  sub.cpp
src/: Main.cpp
test_operators/: CMakeLists.txt
test_operators/include/: tests.hpp
test_operators/src/: tests.cpp
utilities/: CMakeLists.txt
utilities/include/: helpers.hpp
utilities/src/: helpers.cpp
